Update to latest JS-API (3.8)
Updated to ArcGIS for JavaScript API 3.8 (latest version at time of
release). This allows the application to display properly in Internet
Explorer 11.

--- a/styles/browser.css
+++ b/styles/browser.css
@@ -30,8 +30,8 @@ body, html
  
 /*---------------------------------------------------------------------------------------------------------*/
 /* Styles for map*/
-#divMainContainer {
-	top:45px;
+.esriSimpleSliderTL {
+	top: 65px;
 }
 
 #mapNavigation {
