--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -31,8 +31,8 @@ html, body
  
 /*---------------------------------------------------------------------------------------------------------*/
 /* Styles for map*/
-#divMainContainer {
-	top:55px;
+.esriSimpleSliderTL {
+	top: 75px;
 }
 
  /*---------------------------------------------------------------------------------------------------------*/
