--- a/styles/tablet.css
+++ b/styles/tablet.css
@@ -30,8 +30,8 @@ html, body
  
 /*---------------------------------------------------------------------------------------------------------*/
 /* Styles for map*/
-#divMainContainer {
-	top:55px;
+.esriSimpleSliderTL {
+	top: 75px;
 }
 
  /*---------------------------------------------------------------------------------------------------------*/
